# vcalc

./: CMakeLists.txt  README.md
cmake/: antlr_generate.cmake  get_antlr.cmake  get_mlir.cmake
grammar/: VCalc.g4
include/: Ast.h  AstBuilder.h  AstVisitor.h  BackEnd.h  Scope.h  Symbol.h  Type.h  main.h
runtime/: CMakeLists.txt
runtime/src/: CMakeLists.txt  placeholder.c
src/: Ast.cpp  AstBuilder.cpp  AstVisitor.cpp  BackEnd.cpp  CMakeLists.txt  Scope.cpp  Symbol.cpp  Type.cpp  main.cpp
tests/: VCalcCompileConfig.json  VCalcInterpConfig.json  createtests.sh
tests/testfiles/vcalc-enjoyers/: general_unit_tests.out  general_unit_tests.txt  generator_and_filter_unit_tests.out  generator_and_filter_unit_tests.txt  integer_limits_tests.out  integer_limits_tests.txt  loop_condition_unit_test.out  loop_conditional_unit_test.txt  vector_unit_tests.out  vector_unit_tests.txt
