# Gather our source files in this directory.
set(
  vcalc_src_files
    "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/BackEnd.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/AstVisitor.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Ast.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Scope.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Symbol.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Type.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/AstBuilder.cpp"
)

# Build our executable from the source files.
add_executable(vcalc ${vcalc_src_files})
target_include_directories(vcalc PUBLIC ${ANTLR_GEN_DIR})

# Ensure that the antlr4-runtime is available.
add_dependencies(vcalc antlr)

# Find the libraries that correspond to the LLVM components
# that we wish to use
set(LLVM_LINK_COMPONENTS Core Support)
llvm_map_components_to_libnames(llvm_libs core)
get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)

# Add the MLIR, LLVM, antlr runtime and parser as libraries to link.
target_link_libraries(vcalc PRIVATE
    parser
    antlr4-runtime
    ${llvm_libs}
    ${dialect_libs}
    )

# Symbolic link our executable to the base directory so we don't have to go searching for it.
symlink_to_bin("vcalc")
